# Chess-cpp

./: CMakeLists.txt  README.md  board.cpp  board.h  eventmanager.cpp  eventmanager.h  game.cpp  game.h  main.cpp  pieces.cpp  player.h  rules.cpp  rules.h
game_engine/: CMakeLists.txt  README.md  TODO.md  board.cpp  board.h  eventmanager.cpp  eventmanager.h  game.cpp  game.h  pieces.cpp  pieces.h  player.cpp  rules.cpp  rules.h  window.cpp  window.h
